<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gray" >
    
    <EditText
        android:id="@+id/register_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/register_account"
        android:layout_below="@+id/register_account"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />
    
    <EditText
        android:id="@+id/register_again_password"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/register_password"
        android:layout_below="@+id/register_password"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/again_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />
    
    

    <EditText
        android:id="@+id/register_mail"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/register_again_password"
        android:layout_below="@+id/register_again_password"
        android:layout_marginTop="22dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPassword"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/register_ok"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/register_mail"
        android:layout_below="@+id/register_mail"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/register_account"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:maxLength="15"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="14sp" />

        <ImageView
        android:id="@+id/logoimg"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/logo3" />

    <TextView
        android:id="@+id/buy_together"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_account"
        android:layout_below="@+id/logoimg"
        android:text="@string/buyTogether"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/register_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buy_together"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/register_info"
        android:textSize="18sp" />
    
</RelativeLayout>